test/compflags/vass/fast-param-var.no-fast.good
fast-param-var.chpl:5: warning: compiling without --fast
fast-param-var.chpl:8: error: done
